<resources>
    <string name="app_name">Shoping of Mine</string>
    <string name="home">خانه</string>
    <string name="categories">دسته بندی ها</string>
    <string name="cart">cart</string>
    <string name="options">options</string>
    <string name="price">قیمت</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="mostRecent">جدیدترین</string>
    <string name="mostVisited">بیشترین بازدید</string>
    <string name="mostRated">بیشترین امتیاز</string>
    <string name="cartSumTitle">جمع سبد خرید</string>
    <string name="continueProcess">ادامه فرایند خرید</string>
    <string name="attentionText">کالاهای موجود در سبد خرید شما ثبت و رزرو نشده اند. برای ثبت سفارش مراحل بعدی را تکمیل کنید.</string>
    <string name="cartGist">خلاصه سبد</string>
    <string name="priceTitle">قیمت کالاها</string>
    <string name="discountTitle">تخفیف کالاها</string>
    <string name="priceWithDiscountTitle">جمع سبد خرید</string>
    <string name="_1">1</string>
    <string name="sortBy">مرتب سازی بر اساس:</string>
    <string name="reviewsTitle">دیدگاه کاربران</string>
    <string name="add_your_review">دیدگاه خود را درباره این کالا بنویسید.</string>
    <string name="timeIntervalTitle">بازه زمانی یادآوری تکمیل خرید(ساعت): </string>
    <string name="hour">ساعت</string>
    <string name="_3">3</string>
    <string name="darkMode">حالت تاریک:</string>
    <string name="see_all">مشاهده همه</string>
    <string name="product_details">جزئیات مرسوله</string>
    <string name="send_to">ارسال به</string>
    <string name="price_details">جزئیات قیمت</string>
    <string name="apply_order">ثبت سفارش</string>
    <string name="validate_code">بررسی کد</string>
    <string name="discount_question">کد تخفیف داری؟</string>
    <string name="cart_empty">سبد خرید شما خالی است.</string>
    <string name="attention_icon">attention icon</string>
    <string name="add_review">ثبت دیدگاه</string>
    <string name="register">ثبت نام</string>
    <string name="choose_location">انتخاب آدرس روی نقشه</string>
    <string name="post_code">کد پستی</string>
    <string name="address">آدرس</string>
    <string name="city">شهر</string>
    <string name="mail">ایمیل</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="first_name">نام</string>
    <string name="select_location">تایید مکان</string>
    <string name="profile">حساب کاربری</string>
    <string name="login">ورود</string>
    <string name="no_account">حساب کاربری ندارید؟</string>
    <string name="signup">ثبت نام</string>
    <string name="log_out">خروج از حساب کاربری</string>
</resources>