<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/ic_cool_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firsr_name"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/transparent"
                    android:hint="@string/address"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@color/transparent"
                app:boxStrokeColor="@color/transparent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_code"
                    android:layoutDirection="rtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mapButton"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_location"
                app:cornerRadius="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/register"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="24dp" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnim"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_dot_red"
            app:lottie_repeatMode="restart" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>