<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="جستجوی محصول"
            app:searchIcon="@drawable/ic_baseline_search_24" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            tools:layout_editor_absoluteY="8dp" />


        <TextView
            android:id="@+id/popularTitle"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="false"
            android:text="@string/mostVisited"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/popularRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_view_background"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/popularTitle" />

        <TextView
            android:id="@+id/mostRatedTitle"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mostRated"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topRatedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_view_background"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/mostRatedTitle" />

        <TextView
            android:id="@+id/newestTitle"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mostRecent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topRatedRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_view_background"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/newestTitle" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnim"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cart"
            app:lottie_repeatMode="restart" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/productsGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:constraint_referenced_ids="topRatedRecyclerView,popularRecyclerView,recentRecyclerView,popularTitle,mostRatedTitle,newestTitle,viewPager,searchView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>